--- a/core/messages/hypixel.net.properties
+++ b/core/messages/hypixel.net.properties
@@ -6,7 +6,7 @@ starting = The game starts in (%d) second[s]?!
 SkyWars.start = Cages opened! FIGHT!
 SkyWars.kill.1 = (.+) was killed by (.+).
 SkyWars.kill.2 = (.+) was thrown into the void by (.+).
-SkyWars.kill.3 = (.+) was Bomberman'd by (.+).
+SkyWars.kill.3 = (.+) was Bomberman\u0027d by (.+).
 SkyWars.win.solo = \\s*Winner - (.+)
 SkyWars.win.teams = \\s*Winners - (.+)
 SkyWars.cage = Cages open in: (%d) second[s]?!
