--- a/core/messages/hypixel.net.properties
+++ b/core/messages/hypixel.net.properties
@@ -7,7 +7,80 @@ SkyWars.start = Cages opened! FIGHT!
 SkyWars.kill.1 = (.+) was killed by (.+).
 SkyWars.kill.2 = (.+) was thrown into the void by (.+).
 SkyWars.kill.3 = (.+) was Bomberman\u0027d by (.+).
+SkyWars.kill.4 = (.+) was thrown off a cliff by (.+).
 SkyWars.win.solo = \\s*Winner - (.+)
 SkyWars.win.teams = \\s*Winners - (.+)
 SkyWars.cage = Cages open in: (%d) second[s]?!
-SkyWars.kit = Selected Kit: (.+)
+SkyWars.kit.1 = Selected Kit: (.+)
+SkyWars.kit.2 = You've selected the (.+) kit!
+
+BedWars.start = \\s*Bed Wars
+BedWars.rejoin = (.+) reconnected.
+BedWars.win = (.+) has won the game!
+BedWars.eliminated = TEAM ELIMINATED > (.+) Team has been eliminated!
+BedWars.upgrade = (.+) purchased (.+)
+BedWars.diamondupgraded = Diamond Generators have been upgraded to Tier (.+)
+BedWars.emeraldupgraded = Emerald Generators have been upgraded to Tier (.+)
+BedWars.kill.1 = (.+) was killed by (.+).
+BedWars.kill.2 = (.+) was knocked into the void by (.+).
+#BedWars.kill.3 = (.+)  (.+)
+BedWars.kill.4 = (.+) was shoted by (.+).
+#BedWars.kill.5 = (.+)  (.+).
+#BedWars.kill.6 = (.+)  (.+).
+BedWars.kill.7 = (.+) slipped in BBQ sauce off the edge spilled by (.+).
+BedWars.kill.8 = (.+) was not spicy enough for (.+).
+BedWars.kill.9 = (.+) was thrown chilli powder at by (.+).
+BedWars.kill.10 = (.+) was sliced up by your (.+).
+BedWars.kill.11 = (.+) was struck down by (.+).
+BedWars.kill.12 = (.+) was turned to dust by (.+).
+BedWars.kill.13 = (.+) was turned to ash by (.+).
+BedWars.kill.14 = (.+) was melted by (.+).
+BedWars.kill.15 = (.+) was fried by your (.+).
+BedWars.kill.16 = (.+) was spooked by (.+).
+BedWars.kill.17 = (.+) was spooked off the map by (.+).
+BedWars.kill.18 = (.+) was totally spooked by (.+).
+BedWars.kill.19 = (.+) was remotely spooked by (.+).
+BedWars.kill.20 = (.+) was spooked by your (.+).
+BedWars.kill.21 = (.+) was given the cold shoulder by (.+).
+BedWars.kill.22 = (.+) was hit off by a love bomb from (.+).
+BedWars.kill.23 = (.+) was out of the league of (.+).
+BedWars.kill.24 = (.+) was struck with Cupid's arrow by (.+).
+BedWars.kill.25 = (.+) was no match for your (.+).
+BedWars.kill.26 = (.+) be sent to Davy Jones' locker by (.+).
+BedWars.kill.27 = (.+) be cannonballed to death by (.+).
+BedWars.kill.28 = (.+) be killed with magic by (.+).
+BedWars.kill.29 = (.+) be shot and killed by (.+).
+BedWars.kill.30 = (.+) be killed with metal by your (.+).
+BedWars.kill.1.final = (.+) was killed by (.+). FINAL KILL!
+BedWars.kill.2.final = (.+) was knocked into the void by (.+). FINAL KILL!
+#BedWars.kill.3.final = (.+)  (.+). 
+BedWars.kill.4.final = (.+) was shoted by (.+). FINAL KILL!
+#BedWars.kill.5.final = (.+)  (.+).
+#BedWars.kill.6.final = (.+)  (.+).
+BedWars.kill.7.final = (.+) slipped in BBQ sauce off the edge spilled by (.+). FINAL KILL!
+BedWars.kill.8.final = (.+) was not spicy enough for (.+). FINAL KILL!
+BedWars.kill.9.final = (.+) was thrown chilli powder at by (.+). FINAL KILL!
+BedWars.kill.10.final = (.+) was sliced up by your (.+). FINAL KILL!
+BedWars.kill.11.final = (.+) was struck down by (.+). FINAL KILL!
+BedWars.kill.12.final = (.+) was turned to dust by (.+). FINAL KILL!
+BedWars.kill.13.final = (.+) was turned to ash by (.+). FINAL KILL!
+BedWars.kill.14.final = (.+) was melted by (.+). FINAL KILL!
+BedWars.kill.15.final = (.+) was fried by your (.+). FINAL KILL!
+BedWars.kill.16.final = (.+) was spooked by (.+). FINAL KILL!
+BedWars.kill.17.final = (.+) was spooked off the map by (.+). FINAL KILL!
+BedWars.kill.18.final = (.+) was totally spooked by (.+). FINAL KILL!
+BedWars.kill.19.final = (.+) was remotely spooked by (.+). FINAL KILL!
+BedWars.kill.20.final = (.+) was spooked by your (.+). FINAL KILL!
+BedWars.kill.21.final = (.+) was given the cold shoulder by (.+). FINAL KILL!
+BedWars.kill.22.final = (.+) was hit off by a love bomb from (.+). FINAL KILL!
+BedWars.kill.23.final = (.+) was out of the league of (.+). FINAL KILL!
+BedWars.kill.24.final = (.+) was struck with Cupid's arrow by (.+). FINAL KILL!
+BedWars.kill.25.final = (.+) was no match for your (.+). FINAL KILL!
+BedWars.kill.26.final = (.+) be sent to Davy Jones' locker by (.+). FINAL KILL!
+BedWars.kill.27.final = (.+) be cannonballed to death by (.+). FINAL KILL!
+BedWars.kill.28.final = (.+) be killed with magic by (.+). FINAL KILL!
+BedWars.kill.29.final = (.+) be shot and killed by (.+). FINAL KILL!
+BedWars.kill.30.final = (.+) be killed with metal by your (.+). FINAL KILL!
+BedWars.death.1 = (.+) died.
+BedWars.death.2 = (.+) fell into the void.
+BedWars.death.3 = (.+) burned to death.
