--- a/core/messages/hypixel.net.properties
+++ b/core/messages/hypixel.net.properties
@@ -2,15 +2,21 @@ whereami = You are currently connected to server (.+)
 wtfmap = You are currently playing on (.+)
 
 starting = The game starts in (%d) second[s]?!
+cageopen = Cages open in: (%d) second[s]?!
+
+win.1 = \\s*Winner - (.+)
+win.2 = \\s*Winners - (.+)
+
+kit.1 = Selected Kit: (.+)
+kit.2 = You've selected the (.+) kit!
+kill.1 = (.+) was killed by (.+).
+kill.2 = (.+) was thrown into the void by (.+).
+kill.3 = (.+) was Bomberman\u0027d by (.+).
+kill.4 = (.+) was thrown off a cliff by (.+).
+
+ShotHP = (.+) is on (.+) HP!
 
 SkyWars.start = Cages opened! FIGHT!
-SkyWars.kill.1 = (.+) was killed by (.+).
-SkyWars.kill.2 = (.+) was thrown into the void by (.+).
-SkyWars.kill.3 = (.+) was Bomberman\u0027d by (.+).
-SkyWars.kill.4 = (.+) was thrown off a cliff by (.+).
-SkyWars.win.solo = \\s*Winner - (.+)
-SkyWars.win.teams = \\s*Winners - (.+)
-SkyWars.cage = Cages open in: (%d) second[s]?!
 SkyWars.kit.1 = Selected Kit: (.+)
 SkyWars.kit.2 = You've selected the (.+) kit!
 
@@ -84,3 +90,5 @@ BedWars.kill.30.final = (.+) be killed with metal by your (.+). FINAL KILL!
 BedWars.death.1 = (.+) died.
 BedWars.death.2 = (.+) fell into the void.
 BedWars.death.3 = (.+) burned to death.
+
+SpeedUHC.start = Cages opened!
