--- a/core/messages/hypixel.net.properties
+++ b/core/messages/hypixel.net.properties
@@ -3,6 +3,9 @@ wtfmap = You are currently playing on (.+)
 
 starting = The game starts in (%d) second[s]?!
 cageopen = Cages open in: (%d) second[s]?!
+canceled = We don't have enough players! Start cancelled.
+
+coin = \\+(%d) coin[s]?!*
 
 win.1 = \\s*Winner - (.+)
 win.2 = \\s*Winners - (.+)
@@ -13,6 +16,7 @@ kill.1 = (.+) was killed by (.+).
 kill.2 = (.+) was thrown into the void by (.+).
 kill.3 = (.+) was Bomberman\u0027d by (.+).
 kill.4 = (.+) was thrown off a cliff by (.+).
+assist =  You have assisted killing (.+) !
 
 ShotHP = (.+) is on (.+) HP!
 
