kill message(toasted)

--- a/core/messages/hypixel.net.properties
+++ b/core/messages/hypixel.net.properties
@@ -16,6 +16,7 @@ kill.1 = (.+) was killed by (.+).
 kill.2 = (.+) was thrown into the void by (.+).
 kill.3 = (.+) was Bomberman\u0027d by (.+).
 kill.4 = (.+) was thrown off a cliff by (.+).
+kill.5 = (.+) was toasted by (.+).
 assist =  You have assisted killing (.+) !
 
 ShotHP = (.+) is on (.+) HP!
