--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /lang/language_en_US.properties
-    translation: /lang/language_%locale_with_underscore%.properties
+  - source: /src/lang/language_en_US.properties
+    translation: /src/lang/language_%locale_with_underscore%.properties
