--- a/src/core/messages/hypixel.net.properties
+++ b/src/core/messages/hypixel.net.properties
@@ -9,6 +9,12 @@ coin = \\+(%d) coin[s]?!*
 
 win.1 = \\s*Winner - (.+)
 win.2 = \\s*Winners - (.+)
+win.3 = \\s*Winning Team - (.+)
+win.4 = \\s*Winner: (.+)
+
+1st = \\s*1st Place: (.+)
+2nd = \\s*2nd Place: (.+)
+3rd = \\s*3rd Place: (.+)
 
 kit.1 = Selected Kit: (.+)
 kit.2 = You've selected the (.+) kit!
@@ -25,75 +31,42 @@ SkyWars.start = Cages opened! FIGHT!
 SkyWars.kit.1 = Selected Kit: (.+)
 SkyWars.kit.2 = You've selected the (.+) kit!
 
-BedWars.start = \\s*Bed Wars
-BedWars.rejoin = (.+) reconnected.
-BedWars.win = (.+) has won the game!
-BedWars.eliminated = TEAM ELIMINATED > (.+) Team has been eliminated!
-BedWars.upgrade = (.+) purchased (.+)
-BedWars.diamondupgraded = Diamond Generators have been upgraded to Tier (.+)
-BedWars.emeraldupgraded = Emerald Generators have been upgraded to Tier (.+)
-BedWars.kill.1 = (.+) was killed by (.+).
-BedWars.kill.2 = (.+) was knocked into the void by (.+).
-#BedWars.kill.3 = (.+)  (.+)
-BedWars.kill.4 = (.+) was shoted by (.+).
-#BedWars.kill.5 = (.+)  (.+).
-#BedWars.kill.6 = (.+)  (.+).
-BedWars.kill.7 = (.+) slipped in BBQ sauce off the edge spilled by (.+).
-BedWars.kill.8 = (.+) was not spicy enough for (.+).
-BedWars.kill.9 = (.+) was thrown chilli powder at by (.+).
-BedWars.kill.10 = (.+) was sliced up by your (.+).
-BedWars.kill.11 = (.+) was struck down by (.+).
-BedWars.kill.12 = (.+) was turned to dust by (.+).
-BedWars.kill.13 = (.+) was turned to ash by (.+).
-BedWars.kill.14 = (.+) was melted by (.+).
-BedWars.kill.15 = (.+) was fried by your (.+).
-BedWars.kill.16 = (.+) was spooked by (.+).
-BedWars.kill.17 = (.+) was spooked off the map by (.+).
-BedWars.kill.18 = (.+) was totally spooked by (.+).
-BedWars.kill.19 = (.+) was remotely spooked by (.+).
-BedWars.kill.20 = (.+) was spooked by your (.+).
-BedWars.kill.21 = (.+) was given the cold shoulder by (.+).
-BedWars.kill.22 = (.+) was hit off by a love bomb from (.+).
-BedWars.kill.23 = (.+) was out of the league of (.+).
-BedWars.kill.24 = (.+) was struck with Cupid's arrow by (.+).
-BedWars.kill.25 = (.+) was no match for your (.+).
-BedWars.kill.26 = (.+) be sent to Davy Jones' locker by (.+).
-BedWars.kill.27 = (.+) be cannonballed to death by (.+).
-BedWars.kill.28 = (.+) be killed with magic by (.+).
-BedWars.kill.29 = (.+) be shot and killed by (.+).
-BedWars.kill.30 = (.+) be killed with metal by your (.+).
-BedWars.kill.1.final = (.+) was killed by (.+). FINAL KILL!
-BedWars.kill.2.final = (.+) was knocked into the void by (.+). FINAL KILL!
-#BedWars.kill.3.final = (.+)  (.+). 
-BedWars.kill.4.final = (.+) was shoted by (.+). FINAL KILL!
-#BedWars.kill.5.final = (.+)  (.+).
-#BedWars.kill.6.final = (.+)  (.+).
-BedWars.kill.7.final = (.+) slipped in BBQ sauce off the edge spilled by (.+). FINAL KILL!
-BedWars.kill.8.final = (.+) was not spicy enough for (.+). FINAL KILL!
-BedWars.kill.9.final = (.+) was thrown chilli powder at by (.+). FINAL KILL!
-BedWars.kill.10.final = (.+) was sliced up by your (.+). FINAL KILL!
-BedWars.kill.11.final = (.+) was struck down by (.+). FINAL KILL!
-BedWars.kill.12.final = (.+) was turned to dust by (.+). FINAL KILL!
-BedWars.kill.13.final = (.+) was turned to ash by (.+). FINAL KILL!
-BedWars.kill.14.final = (.+) was melted by (.+). FINAL KILL!
-BedWars.kill.15.final = (.+) was fried by your (.+). FINAL KILL!
-BedWars.kill.16.final = (.+) was spooked by (.+). FINAL KILL!
-BedWars.kill.17.final = (.+) was spooked off the map by (.+). FINAL KILL!
-BedWars.kill.18.final = (.+) was totally spooked by (.+). FINAL KILL!
-BedWars.kill.19.final = (.+) was remotely spooked by (.+). FINAL KILL!
-BedWars.kill.20.final = (.+) was spooked by your (.+). FINAL KILL!
-BedWars.kill.21.final = (.+) was given the cold shoulder by (.+). FINAL KILL!
-BedWars.kill.22.final = (.+) was hit off by a love bomb from (.+). FINAL KILL!
-BedWars.kill.23.final = (.+) was out of the league of (.+). FINAL KILL!
-BedWars.kill.24.final = (.+) was struck with Cupid's arrow by (.+). FINAL KILL!
-BedWars.kill.25.final = (.+) was no match for your (.+). FINAL KILL!
-BedWars.kill.26.final = (.+) be sent to Davy Jones' locker by (.+). FINAL KILL!
-BedWars.kill.27.final = (.+) be cannonballed to death by (.+). FINAL KILL!
-BedWars.kill.28.final = (.+) be killed with magic by (.+). FINAL KILL!
-BedWars.kill.29.final = (.+) be shot and killed by (.+). FINAL KILL!
-BedWars.kill.30.final = (.+) be killed with metal by your (.+). FINAL KILL!
-BedWars.death.1 = (.+) died.
-BedWars.death.2 = (.+) fell into the void.
-BedWars.death.3 = (.+) burned to death.
+TNT.start = The game has started!
+PVPRun.kill.1 = (.+) died to (.+)!
+PVPRun.kill.2 = (.+) was knocked into the void by (.+)!
+Wizards.kill.1 = You killed (.+)!
+Wizards.kill.2 = You threw (.+) into the void!
+Wizards.death.1 = You were killed by (.+)!
+Wizards.death.2 = You were thrown into the void by (.+)!
+Wizards.death.3 = You fell into the void!
+Wizards.death.4 = You died!
+Wizards.assist = You assisted (.+) in killing (.+)!!
+Wizards.kit.1 = You are using the (.+) kit
+Wizards.kit.2 = You chose to be (.+) once the game starts!
+Wizards.kit.3 = You will respawn as (.+) next time!
+Wizards.team.1 = You are on team (.+)
+Wizards.team.2 = You are now on the (.+) team!
+Wizards.rejoin = You have joined back into your TNT Games game. To leave this game, type /lobby
+
+MiniWalls.team = You have joined the (.+) team!
+MiniWalls.kill.1 = You killed (.+)!*
+MiniWalls.kill.2 = You shot (.+)!*
+MiniWalls.kill.3 = You killed (.+) with help from the (.+)!*
+MiniWalls.kill.4 = You knocked (.+) into the void!*
+MiniWalls.kill.5 = You knocked (.+) off the edge!*
+MiniWalls.death.1 = You were killed by (.+)!
+MiniWalls.death.2 = You were shot by (.+)!
+MiniWalls.death.3 = You were killed by the Yellow Mini Wither!
+MiniWalls.death.4 = You were killed by (.+) with help from the (.+)!
+MiniWalls.death.5 = You were knocked into the void by (.+)!
+MiniWalls.death.6 = You were knocked off the edge by (.+)!
+MiniWalls.death.7 = You fell to your death.
+MiniWalls.death.8 = You fell into the void.
+MiniWalls.death.9 = You drowned.
+MiniWalls.death.10 = You couldn't swim in lava.
+MiniWalls.death.11 = You died a fiery death.
 
 SpeedUHC.start = Cages opened!
+
+BuildBattle.theme.1 = Build something relevant to the theme: (.+)
+BuildBattle.theme.2 = Welcome back! You are building something relevant to the theme (.+).
