--- a/src/core/messages/hypixel.net.properties
+++ b/src/core/messages/hypixel.net.properties
@@ -12,10 +12,6 @@ win.2 = \\s*Winners - (.+)
 win.3 = \\s*Winning Team - (.+)
 win.4 = \\s*Winner: (.+)
 
-1st = \\s*1st Place: (.+)
-2nd = \\s*2nd Place: (.+)
-3rd = \\s*3rd Place: (.+)
-
 kit.1 = Selected Kit: (.+)
 kit.2 = You've selected the (.+) kit!
 kill.1 = (.+) was killed by (.+).
@@ -25,13 +21,13 @@ kill.4 = (.+) was thrown off a cliff by (.+).
 kill.5 = (.+) was toasted by (.+).
 assist =  You have assisted killing (.+) !
 
-ShotHP = (.+) is on (.+) HP!
-
 SkyWars.start = Cages opened! FIGHT!
 SkyWars.kit.1 = Selected Kit: (.+)
 SkyWars.kit.2 = You've selected the (.+) kit!
 
 TNT.start = The game has started!
+TNTTag.start = \\s*Round 1 has started!
+TNT.1st = \\s*1st Place: (.+)
 PVPRun.kill.1 = (.+) died to (.+)!
 PVPRun.kill.2 = (.+) was knocked into the void by (.+)!
 Wizards.kill.1 = You killed (.+)!
@@ -46,9 +42,9 @@ Wizards.kit.2 = You chose to be (.+) once the game starts!
 Wizards.kit.3 = You will respawn as (.+) next time!
 Wizards.team.1 = You are on team (.+)
 Wizards.team.2 = You are now on the (.+) team!
-Wizards.rejoin = You have joined back into your TNT Games game. To leave this game, type /lobby
 
-MiniWalls.team = You have joined the (.+) team!
+MiniWalls.team.1 = You have joined the (.+) team!
+MiniWalls.team.2 = Your party has attempted to join the (.+) team! You will be placed together if there is enough room.
 MiniWalls.kill.1 = You killed (.+)!*
 MiniWalls.kill.2 = You shot (.+)!*
 MiniWalls.kill.3 = You killed (.+) with help from the (.+)!*
