--- a/src/core/messages/hypixel.net.properties
+++ b/src/core/messages/hypixel.net.properties
@@ -15,10 +15,11 @@ win.4 = \\s*Winner: (.+)
 kit.1 = Selected Kit: (.+)
 kit.2 = You've selected the (.+) kit!
 kill.1 = (.+) was killed by (.+).
-kill.2 = (.+) was thrown into the void by (.+).
-kill.3 = (.+) was Bomberman\u0027d by (.+).
-kill.4 = (.+) was thrown off a cliff by (.+).
-kill.5 = (.+) was toasted by (.+).
+kill.2 = (.+) was shoted by (.+).
+kill.3 = (.+) was thrown into the void by (.+).
+kill.4 = (.+) was Bomberman\u0027d by (.+).
+kill.5 = (.+) was thrown off a cliff by (.+).
+kill.6 = (.+) was toasted by (.+).
 assist =  You have assisted killing (.+) !
 
 SkyWars.start = Cages opened! FIGHT!
@@ -42,12 +43,13 @@ Wizards.kit.2 = You chose to be (.+) once the game starts!
 Wizards.kit.3 = You will respawn as (.+) next time!
 Wizards.team.1 = You are on team (.+)
 Wizards.team.2 = You are now on the (.+) team!
+Wizards.team.3 = You are already on the (.+) team!
 
 MiniWalls.team.1 = You have joined the (.+) team!
 MiniWalls.team.2 = Your party has attempted to join the (.+) team! You will be placed together if there is enough room.
 MiniWalls.kill.1 = You killed (.+)!*
 MiniWalls.kill.2 = You shot (.+)!*
-MiniWalls.kill.3 = You killed (.+) with help from the (.+)!*
+#MiniWalls.kill.3 = You killed (.+) with help from the (.+)!*
 MiniWalls.kill.4 = You knocked (.+) into the void!*
 MiniWalls.kill.5 = You knocked (.+) off the edge!*
 MiniWalls.death.1 = You were killed by (.+)!
@@ -66,3 +68,29 @@ SpeedUHC.start = Cages opened!
 
 BuildBattle.theme.1 = Build something relevant to the theme: (.+)
 BuildBattle.theme.2 = Welcome back! You are building something relevant to the theme (.+).
+
+QuakeCraft.team.1 = You are now on the (.+) team!
+QuakeCraft.team.2 = You are already on the (.+) team!
+QuakeCraft.kill.1 = (.+) gibbed (.+)
+QuakeCraft.kill.2 = (.+) Wormed (.+)
+QuakeCraft.kill.3 = (.+) Shelled (.+)
+QuakeCraft.kill.4 = (.+) Redstoned (.+)
+QuakeCraft.kill.5 = (.+) Slapped (.+)
+QuakeCraft.kill.6 = (.+) Fall in love with (.+)
+QuakeCraft.kill.7 = (.+) Farmed (.+)
+QuakeCraft.kill.8 = (.+) Fall in love with (.+)
+QuakeCraft.kill.9 = (.+) Drowned (.+)
+QuakeCraft.kill.10 = (.+) Baked (.+)
+QuakeCraft.kill.11 = (.+) Bazinga'd (.+)
+QuakeCraft.kill.12 = (.+) Puzzled (.+)
+QuakeCraft.kill.13 = (.+) Magnified (.+)
+QuakeCraft.kill.14 = (.+) Pommed (.+)
+QuakeCraft.kill.15 = (.+) vaporized (.+)
+QuakeCraft.kill.16 = (.+) Smelted (.+)
+QuakeCraft.kill.17 = (.+) Consumed (.+)
+
+Paintball.team.1 = You are now on the (.+) team!
+Paintball.team.2 = You are already on the (.+) team!
+Paintball.kill = You fragged (.+)
+Paintball.death = You were fragged by (.+)
+Paintball.nuke = (.+) was nuked by (.+)
