--- a/src/core/messages/hypixel.net.properties
+++ b/src/core/messages/hypixel.net.properties
@@ -15,7 +15,7 @@ win.4 = \\s*Winner: (.+)
 kit.1 = Selected Kit: (.+)
 kit.2 = You've selected the (.+) kit!
 kill.1 = (.+) was killed by (.+).
-kill.2 = (.+) was shoted by (.+).
+kill.2 = (.+) was shot by (.+).
 kill.3 = (.+) was thrown into the void by (.+).
 kill.4 = (.+) was Bomberman\u0027d by (.+).
 kill.5 = (.+) was thrown off a cliff by (.+).
