--- a/src/core/messages/hypixel.net.properties
+++ b/src/core/messages/hypixel.net.properties
@@ -14,30 +14,31 @@ win.4 = \\s*Winner: (.+)
 
 kit.1 = Selected Kit: (.+)
 kit.2 = You've selected the (.+) kit!
-kill.1 = (.+) was killed by (.+).
-kill.2 = (.+) was shot by (.+).
-kill.3 = (.+) was thrown into the void by (.+).
-kill.4 = (.+) was Bomberman\u0027d by (.+).
-kill.5 = (.+) was thrown off a cliff by (.+).
-kill.6 = (.+) was toasted by (.+).
-assist =  You have assisted killing (.+) !
+kill.1 = ([a-zA-Z0-9_]+) was killed by ([a-zA-Z0-9_]+).
+kill.2 = ([a-zA-Z0-9_]+) was shot by ([a-zA-Z0-9_]+).
+kill.3 = ([a-zA-Z0-9_]+) was thrown into the void by ([a-zA-Z0-9_]+).
+kill.4 = ([a-zA-Z0-9_]+) was Bomberman\u0027d by ([a-zA-Z0-9_]+).
+kill.5 = ([a-zA-Z0-9_]+) was thrown off a cliff by ([a-zA-Z0-9_]+).
+kill.6 = ([a-zA-Z0-9_]+) was toasted by ([a-zA-Z0-9_]+).
+assist =  You have assisted killing ([a-zA-Z0-9_]+) !
 
 SkyWars.start = Cages opened! FIGHT!
 SkyWars.kit.1 = Selected Kit: (.+)
 SkyWars.kit.2 = You've selected the (.+) kit!
+SkyWars.kill = \\+(%d) coin[s]?!*  Kill
 
 TNT.start = The game has started!
 TNTTag.start = \\s*Round 1 has started!
 TNT.1st = \\s*1st Place: (.+)
-PVPRun.kill.1 = (.+) died to (.+)!
-PVPRun.kill.2 = (.+) was knocked into the void by (.+)!
-Wizards.kill.1 = You killed (.+)!
-Wizards.kill.2 = You threw (.+) into the void!
-Wizards.death.1 = You were killed by (.+)!
-Wizards.death.2 = You were thrown into the void by (.+)!
+PVPRun.kill.1 = ([a-zA-Z0-9_]+) died to ([a-zA-Z0-9_]+)!
+PVPRun.kill.2 = ([a-zA-Z0-9_]+) was knocked into the void by ([a-zA-Z0-9_]+)!
+Wizards.kill.1 = You killed ([a-zA-Z0-9_]+)!
+Wizards.kill.2 = You threw ([a-zA-Z0-9_]+) into the void!
+Wizards.death.1 = You were killed by ([a-zA-Z0-9_]+)!
+Wizards.death.2 = You were thrown into the void by ([a-zA-Z0-9_]+)!
 Wizards.death.3 = You fell into the void!
 Wizards.death.4 = You died!
-Wizards.assist = You assisted (.+) in killing (.+)!!
+Wizards.assist = You assisted ([a-zA-Z0-9_]+) in killing ([a-zA-Z0-9_]+)!!
 Wizards.kit.1 = You are using the (.+) kit
 Wizards.kit.2 = You chose to be (.+) once the game starts!
 Wizards.kit.3 = You will respawn as (.+) next time!
@@ -47,17 +48,17 @@ Wizards.team.3 = You are already on the (.+) team!
 
 MiniWalls.team.1 = You have joined the (.+) team!
 MiniWalls.team.2 = Your party has attempted to join the (.+) team! You will be placed together if there is enough room.
-MiniWalls.kill.1 = You killed (.+)!*
-MiniWalls.kill.2 = You shot (.+)!*
-#MiniWalls.kill.3 = You killed (.+) with help from the (.+)!*
-MiniWalls.kill.4 = You knocked (.+) into the void!*
-MiniWalls.kill.5 = You knocked (.+) off the edge!*
-MiniWalls.death.1 = You were killed by (.+)!
-MiniWalls.death.2 = You were shot by (.+)!
+MiniWalls.kill.1 = You killed ([a-zA-Z0-9_]+)!*
+MiniWalls.kill.2 = You shot ([a-zA-Z0-9_]+)!*
+#MiniWalls.kill.3 = You killed ([a-zA-Z0-9_]+) with help from the ([a-zA-Z0-9_]+)!*
+MiniWalls.kill.4 = You knocked ([a-zA-Z0-9_]+) into the void!*
+MiniWalls.kill.5 = You knocked ([a-zA-Z0-9_]+) off the edge!*
+MiniWalls.death.1 = You were killed by ([a-zA-Z0-9_]+)!
+MiniWalls.death.2 = You were shot by ([a-zA-Z0-9_]+)!
 MiniWalls.death.3 = You were killed by the Yellow Mini Wither!
-MiniWalls.death.4 = You were killed by (.+) with help from the (.+)!
-MiniWalls.death.5 = You were knocked into the void by (.+)!
-MiniWalls.death.6 = You were knocked off the edge by (.+)!
+MiniWalls.death.4 = You were killed by ([a-zA-Z0-9_]+) with help from the ([a-zA-Z0-9_]+)!
+MiniWalls.death.5 = You were knocked into the void by ([a-zA-Z0-9_]+)!
+MiniWalls.death.6 = You were knocked off the edge by ([a-zA-Z0-9_]+)!
 MiniWalls.death.7 = You fell to your death.
 MiniWalls.death.8 = You fell into the void.
 MiniWalls.death.9 = You drowned.
@@ -69,28 +70,30 @@ SpeedUHC.start = Cages opened!
 BuildBattle.theme.1 = Build something relevant to the theme: (.+)
 BuildBattle.theme.2 = Welcome back! You are building something relevant to the theme (.+).
 
-QuakeCraft.team.1 = You are now on the (.+) team!
-QuakeCraft.team.2 = You are already on the (.+) team!
-QuakeCraft.kill.1 = (.+) gibbed (.+)
-QuakeCraft.kill.2 = (.+) Wormed (.+)
-QuakeCraft.kill.3 = (.+) Shelled (.+)
-QuakeCraft.kill.4 = (.+) Redstoned (.+)
-QuakeCraft.kill.5 = (.+) Slapped (.+)
-QuakeCraft.kill.6 = (.+) Fall in love with (.+)
-QuakeCraft.kill.7 = (.+) Farmed (.+)
-QuakeCraft.kill.8 = (.+) Fall in love with (.+)
-QuakeCraft.kill.9 = (.+) Drowned (.+)
-QuakeCraft.kill.10 = (.+) Baked (.+)
-QuakeCraft.kill.11 = (.+) Bazinga'd (.+)
-QuakeCraft.kill.12 = (.+) Puzzled (.+)
-QuakeCraft.kill.13 = (.+) Magnified (.+)
-QuakeCraft.kill.14 = (.+) Pommed (.+)
-QuakeCraft.kill.15 = (.+) vaporized (.+)
-QuakeCraft.kill.16 = (.+) Smelted (.+)
-QuakeCraft.kill.17 = (.+) Consumed (.+)
+Quakecraft.team.1 = You are now on the (.+) team!
+Quakecraft.team.2 = You are already on the (.+) team!
+Quakecraft.start = \\s*Quakecraft
+Quakecraft.kill.1 = ([a-zA-Z0-9_]+) gibbed ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.2 = ([a-zA-Z0-9_]+) Wormed ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.3 = ([a-zA-Z0-9_]+) Shelled ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.4 = ([a-zA-Z0-9_]+) Redstoned ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.5 = ([a-zA-Z0-9_]+) Slapped ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.6 = ([a-zA-Z0-9_]+) Fall in love with ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.7 = ([a-zA-Z0-9_]+) Farmed ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.8 = ([a-zA-Z0-9_]+) Fall in love with ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.9 = ([a-zA-Z0-9_]+) Drowned ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.10 = ([a-zA-Z0-9_]+) Baked ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.11 = ([a-zA-Z0-9_]+) Bazinga'd ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.12 = ([a-zA-Z0-9_]+) Puzzled ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.13 = ([a-zA-Z0-9_]+) Magnified ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.14 = ([a-zA-Z0-9_]+) Pommed ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.15 = ([a-zA-Z0-9_]+) vaporized ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.16 = ([a-zA-Z0-9_]+) Smelted ([a-zA-Z0-9_]+)[ HEADSHOT]*
+Quakecraft.kill.17 = ([a-zA-Z0-9_]+) Consumed ([a-zA-Z0-9_]+)[ HEADSHOT]*
 
 Paintball.team.1 = You are now on the (.+) team!
 Paintball.team.2 = You are already on the (.+) team!
-Paintball.kill = You fragged (.+)
-Paintball.death = You were fragged by (.+)
-Paintball.nuke = (.+) was nuked by (.+)
+Paintball.start = \\s*Paintball Warfare
+Paintball.kill = You fragged ([a-zA-Z0-9_]+)
+Paintball.death = You were fragged by ([a-zA-Z0-9_]+)
+Paintball.nuke = ([a-zA-Z0-9_]+) was nuked by ([a-zA-Z0-9_]+)
