--- a/src/core/messages/hypixel.net.properties
+++ b/src/core/messages/hypixel.net.properties
@@ -6,6 +6,7 @@ cageopen = Cages open in: (%d) second[s]?!
 canceled = We don't have enough players! Start cancelled.
 
 coin = \\+(%d) coin[s]?!*
+SkyWars.kill = \\+[0-9]* coin[s]?!.*  Kill
 
 win.1 = \\s*Winner - (.+)
 win.2 = \\s*Winners - (.+)
@@ -23,9 +24,8 @@ kill.6 = ([a-zA-Z0-9_]+) was toasted by ([a-zA-Z0-9_]+).
 assist =  You have assisted killing ([a-zA-Z0-9_]+) !
 
 SkyWars.start = Cages opened! FIGHT!
-SkyWars.kit.1 = Selected Kit: (.+)
-SkyWars.kit.2 = You've selected the (.+) kit!
-SkyWars.kill = \\+(%d) coin[s]?!*  Kill
+
+SpeedUHC.start = Cages opened!
 
 TNT.start = The game has started!
 TNTTag.start = \\s*Round 1 has started!
@@ -48,11 +48,11 @@ Wizards.team.3 = You are already on the (.+) team!
 
 MiniWalls.team.1 = You have joined the (.+) team!
 MiniWalls.team.2 = Your party has attempted to join the (.+) team! You will be placed together if there is enough room.
-MiniWalls.kill.1 = You killed ([a-zA-Z0-9_]+)!*
-MiniWalls.kill.2 = You shot ([a-zA-Z0-9_]+)!*
-#MiniWalls.kill.3 = You killed ([a-zA-Z0-9_]+) with help from the ([a-zA-Z0-9_]+)!*
-MiniWalls.kill.4 = You knocked ([a-zA-Z0-9_]+) into the void!*
-MiniWalls.kill.5 = You knocked ([a-zA-Z0-9_]+) off the edge!*
+MiniWalls.kill.1 = You killed ([a-zA-Z0-9_]+)!.*
+MiniWalls.kill.2 = You shot ([a-zA-Z0-9_]+)!.*
+MiniWalls.kill.3 = You killed ([a-zA-Z0-9_]+) with help from the ([a-zA-Z0-9_]+)!.*
+MiniWalls.kill.4 = You knocked ([a-zA-Z0-9_]+) into the void!.*
+MiniWalls.kill.5 = You knocked ([a-zA-Z0-9_]+) off the edge!.*
 MiniWalls.death.1 = You were killed by ([a-zA-Z0-9_]+)!
 MiniWalls.death.2 = You were shot by ([a-zA-Z0-9_]+)!
 MiniWalls.death.3 = You were killed by the Yellow Mini Wither!
@@ -64,8 +64,6 @@ MiniWalls.death.8 = You fell into the void.
 MiniWalls.death.9 = You drowned.
 MiniWalls.death.10 = You couldn't swim in lava.
 MiniWalls.death.11 = You died a fiery death.
-
-SpeedUHC.start = Cages opened!
 
 BuildBattle.theme.1 = Build something relevant to the theme: (.+)
 BuildBattle.theme.2 = Welcome back! You are building something relevant to the theme (.+).
