--- a/src/core/messages/hypixel.net.properties
+++ b/src/core/messages/hypixel.net.properties
@@ -5,7 +5,8 @@ starting = The game starts in (%d) second[s]?!
 cageopen = Cages open in: (%d) second[s]?!
 canceled = We don't have enough players! Start cancelled.
 
-coin = \\+(%d) coin[s]?!*
+coin.1 = \\+(%d) coin[s]?!*
+coin.2 = \\+(%d) coin[s]? (*)!
 SkyWars.kill = \\+[0-9]* coin[s]?!.*  Kill
 
 win.1 = \\s*Winner - (.+)
